--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <label for="pesan" class="form-label">Pesan</label>
                 <textarea class="form-control" id="pesan" rows="4"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Kirim</button>
+              <button type="submit" class="btn btn-success">Kirim</button>
             </form>
           </div>
         </div>
